--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,78 +7,87 @@ stages:
     outs:
     - ${mlflow_experiment_name_file_path}
 
-  # create_dataset:
-  #   cmd: python ${download_script_file}
-  #   deps:
-  #   - params.yaml
-  #   - ${create_dataset}
-  #   params:
-  #    - create_dataset
-  #   outs:
-  #   - ${create_dataset.download_folder}/${download.download_file}
+
+  download_current_data:
+    cmd: python ${download_current_data_script_file}
+    deps: 
+      - ${download_current_data.data_folder}/${download_current_data_script_file}
+    params:
+      - download_current_data
+    outs:
+      - ${download_current_data.data_folder}/${download_current_data.raw_current_data_file}:
+          cache: false
+
 
   preprocess:
     cmd: python ${preprocess_script_file}
     deps:
-    # - params.yaml
-    # - ${mlflow_experiment_name_file_path}
     - ${preprocess_script_file}
-    - ${create_dataset.download_folder}/${create_dataset.download_file} 
     params:
     - preprocess 
     outs:
-    - ${preprocess.output_reference_data_file_path}
-    - ${preprocess.output_current_data_file_path}
-    - ${preprocess.flask_dict_file_path}
-    - ${preprocess.onehot_name_dictionary_file_path}
+    - ${preprocess.data_folder}/${preprocess.output_file}:
+          cache: false
+    - ${preprocess.data_folder}/${preprocess.flask_dict_file_path}
+    - ${preprocess.data_folder}/${preprocess.onehot_name_dictionary_file_path}
 
-  train:
-    cmd: python ${train_script_file}
-    deps:
-    # - params.yaml
-    # - ${mlflow_experiment_name_file_path}
-    - ${train_script_file}
-    - ${preprocess.output_reference_data_file_path}     
-    params:
-    - train 
-    outs:
-    - ${train.test_X_file_path}
-    - ${train.test_y_file_path}    
-    - ${train.model_file_path}
-
-  evaluate:
-    cmd: python ${evaluate_script_file}
-    deps:
-    # - params.yaml
-    # - ${mlflow_experiment_name_file_path}
-    - ${evaluate_script_file}
-    - ${preprocess.output_reference_data_file_path}    
-    - ${train.test_y_file_path}    
-    - ${train.model_file_path}
-    params:
-    - evaluate
 
   evidentlyai:
     cmd: python ${evidentlyai_script_file}
     deps:
-    # - params.yaml
-    # - ${mlflow_experiment_name_file_path}
-    - ${evidentlyai_script_file}
-    - ${preprocess.output_reference_data_file_path}
-    - ${preprocess.output_current_data_file_path}
+    - ${evidentlyai.data_folder}/${evidentlyai.reference_data_file}
+    - ${evidentlyai.data_folder}/${evidentlyai.current_data_file}
     params:
     - evidentlyai
     outs:
     - ${evidentlyai.evidently_htmls_folder_name}
-    - ${evidentlyai.current_accuracy_dict_file}
 
-  hugging_face_push:
-    cmd: python ${hugging_face_push_script_file}
+
+  merge_data:
+    cmd: python ${merge_data_script_file}
     deps:
-    # - params.yaml
-    # - ${mlflow_experiment_name_file_path}
-    - ${hugging_face_push_script_file}
-    - ${evidentlyai.current_accuracy_dict_file}
-    - ${train.model_file_path}
+    - ${merge_data.data_folder}/${merge_data.preprocessed_reference_data_file}
+    - ${merge_data.data_folder}/${merge_data.preprocessed_current_data_file}
     params:
-    - hugging_face_push
+    - merge_data
+    outs:
+    - ${merge_data.data_folder}/${merge_data.merged_data_file}:
+          cache: false
+
+
+  train:
+    cmd: python ${train_script_file}
+    deps:
+    - ${train_script_file}
+    - ${train.data_folder}/${train.file}
+    params:
+    - train 
+    outs:
+    - ${train.data_folder}/${train.test_X_file}:
+        cache: false  # Don't store in DVC cache
+    - ${train.data_folder}/${train.test_y_file}:
+        cache: false  # Don't store in DVC cache
+    - ${train.new_model_file_path}
+
+
+  evaluate:
+    cmd: python ${evaluate_script_file}
+    deps:
+    - ${evaluate_script_file}
+    - ${evaluate.data_folder}/${train.test_X_file}
+    - ${evaluate.data_folder}/${train.test_y_file}
+    params:
+    - evaluate
+
+  upload_predictions:
+    cmd: python ${upload_predictions_script_file}
+    deps:
+
+    - ${upload_predictions_script_file}
+    - ${upload_predictions.data_folder}/${upload_predictions.preprocessed_current_data_file}
+    - ${upload_predictions.new_model_file_path}
+    params:
+    - upload_predictions
+    outs:
+    - ${upload_predictions.data_folder}/${upload_predictions.preprocessed_current_data_with_predictions_file}:
+          cache: false
