--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-kaggle
+#kaggle
 mlflow
 dvc
 dagshub
@@ -14,4 +14,5 @@ ipykernel
 ruamel.yaml
 evidently
 flask
-huggingface_hub 
+#huggingface_hub 
+google-cloud-storage
