--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,4 +1,4 @@
-name: Google Cloud Authentication Workflow
+name: Google Cloud Authentication
 
 on:
   push:
@@ -6,31 +6,37 @@ on:
       - main
 
 jobs:
-  test_google_credentials:
+  authenticate-google-cloud:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    # Step 1: Checkout the repository
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Step 2: Decode the base64-encoded credentials file and save it
-      - name: Decode Google credentials and set up
-        run: |
-          echo "${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}" | base64 --decode > /tmp/google-credentials.json
-          export GOOGLE_APPLICATION_CREDENTIALS=/tmp/google-credentials.json
+    # Step 2: Decode the Google credentials from the secret and set up
+    - name: Decode Google credentials from base64
+      run: |
+        # Decode the base64-encoded Google credentials from GitHub Secrets
+        echo "${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}" | base64 --decode > /tmp/google-credentials.json
+        
+        # Check if the file exists and has content
+        ls -l /tmp/google-credentials.json
+        cat /tmp/google-credentials.json
 
-      # Step 3: Authenticate using the decoded credentials
-      - name: Authenticate with Google Cloud
-        run: |
-          gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-          gcloud config set project YOUR_PROJECT_ID  # Replace with your Google Cloud project ID
-          gcloud auth list  # Verify that the service account is authenticated
+        # Set the GOOGLE_APPLICATION_CREDENTIALS environment variable
+        export GOOGLE_APPLICATION_CREDENTIALS=/tmp/google-credentials.json
 
-      # Step 4: Run any other command using Google Cloud SDK or MLFlow, for example
-      - name: Test Google Cloud SDK
-        run: |
-          gcloud compute instances list  # Example command to verify authentication
+    # Step 3: Authenticate using the decoded credentials
+    - name: Authenticate with Google Cloud
+      run: |
+        gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
+        gcloud auth list  # Verify the authentication
+
+    # Step 4: Run a sample command to check authentication
+    - name: Test Google Cloud SDK
+      run: |
+        gcloud compute instances list  # Example command
 
 # on:
 #   push:
