--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -32,20 +32,23 @@ jobs:
         gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
         gcloud auth list  # Verify the authentication
 
-    # Step 4: Extract project_id from the credentials file and set the project
+    # Step 4: Extract project_id from credentials
     - name: Extract project_id from credentials
       id: extract_project_id
       run: |
-        # Extract the project_id from the JSON file
         PROJECT_ID=$(jq -r .project_id < /tmp/google-credentials.json)
-        
-        # Set the project_id as an environment variable
         echo "CLOUDSDK_CORE_PROJECT=$PROJECT_ID" >> $GITHUB_ENV
 
-    # Step 5: Run a sample command to check authentication
+    # Step 5: Enable the Compute Engine API
+    - name: Enable Compute Engine API
+      run: |
+        gcloud services enable compute.googleapis.com --project=$PROJECT_ID
+
+    # Step 6: Test Google Cloud SDK
     - name: Test Google Cloud SDK
       run: |
         gcloud compute instances list  # Example command
+
 
 
 # on:
