--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,4 +1,4 @@
-name: Google Cloud Authentication
+name: Google Cloud Storage Connection Test
 
 on:
   push:
@@ -6,56 +6,29 @@ on:
       - main
 
 jobs:
-  authenticate-google-cloud:
+  test-connection:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout repository
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
-    # Step 2: Decode Google credentials from base64
-    - name: Decode Google credentials from base64
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'  # Specify the Python version you are using
+
+    - name: Install dependencies
       run: |
-        echo "${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}" | base64 --decode > /tmp/google-credentials.json
-        
-        # Verify the decoded file exists
-        ls -l /tmp/google-credentials.json
-        cat /tmp/google-credentials.json  # Optional, can be removed in production for security
-        
-        # Set the GOOGLE_APPLICATION_CREDENTIALS environment variable to the path
-        echo "GOOGLE_APPLICATION_CREDENTIALS=/tmp/google-credentials.json" >> $GITHUB_ENV
+        python -m pip install --upgrade pip
+        pip install google-cloud-storage python-dotenv
 
-    # Step 3: Authenticate using the decoded credentials
-    - name: Authenticate with Google Cloud
+    - name: Run the connection script
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}
+        BUCKET_NAME: ${{ secrets.BUCKET_NAME }}  # Assuming you've added the bucket name as a secret
       run: |
-        gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-        gcloud auth list  # Verify the authentication
-
-    # Step 4: Extract project_id from credentials
-    - name: Extract project_id from credentials
-      id: extract_project_id
-      run: |
-        PROJECT_ID=$(jq -r .project_id < /tmp/google-credentials.json)
-        echo "CLOUDSDK_CORE_PROJECT=$PROJECT_ID" >> $GITHUB_ENV
-        echo "PROJECT_ID=$PROJECT_ID" >> $GITHUB_ENV  # This line ensures the project ID is available as a variable.
-
-    # Step 5: Set the project ID for gcloud
-    - name: Set project for gcloud
-      run: |
-        gcloud config set project $PROJECT_ID  # Explicitly set the project for gcloud
-
-    # Step 6: Enable the Compute Engine API
-    - name: Enable Compute Engine API
-      run: |
-        gcloud services enable compute.googleapis.com --project=$PROJECT_ID
-
-    # Step 7: Test Google Cloud SDK
-    - name: Test Google Cloud SDK
-      run: |
-        gcloud compute instances list  # Example command
-
-
+        python ./test_connection.py  # Path to your Python script
 
 
 # on:
