--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,4 +1,4 @@
-name: Google Cloud Storage Connection Test
+name: Test Google Cloud Connection
 
 on:
   push:
@@ -10,26 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'  # Specify the Python version you are using
+      - name: Set up Python environment
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install google-cloud-storage python-dotenv
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
+      - name: Decode Google Credentials
+        run: |
+          echo ${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }} | base64 --decode > /home/runner/google-credentials.json
+          
+      - name: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
+        run: |
+          echo "GOOGLE_APPLICATION_CREDENTIALS=/home/runner/google-credentials.json" >> $GITHUB_ENV
 
-    - name: Run the connection script
-      env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}
-        BUCKET_NAME: ${{ secrets.BUCKET_NAME }}  # Assuming you've added the bucket name as a secret
-      run: |
-        python ./test_connection.py  # Path to your Python script
-
+      - name: Run Python script to test connection
+        run: |
+          python ./test_connection.py
 
 # on:
 #   push:
