--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,4 +1,4 @@
-name: Test Google Cloud Connection
+name: Test Google Cloud Bucket Connection
 
 on:
   push:
@@ -8,32 +8,37 @@ on:
 jobs:
   test-connection:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up Python environment
+        
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
       - name: Decode Google Credentials
         run: |
           echo ${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }} | base64 --decode > /home/runner/google-credentials.json
-          
+
       - name: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
         run: |
           echo "GOOGLE_APPLICATION_CREDENTIALS=/home/runner/google-credentials.json" >> $GITHUB_ENV
 
+      - name: Set BUCKET_NAME environment variable
+        run: |
+          echo "BUCKET_NAME=${{ secrets.BUCKET_NAME }}" >> $GITHUB_ENV
+
       - name: Run Python script to test connection
         run: |
           python ./test_connection.py
+
 
 # on:
 #   push:
