--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -21,11 +21,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install google-cloud-storage python-dotenv
 
       - name: Decode Google Credentials
         run: |
-          echo ${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }} | base64 --decode > /home/runner/google-credentials.json
+          echo "${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}" | base64 --decode > /home/runner/google-credentials.json
 
       - name: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
         run: |
