Finalized functioning DVC pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ __pycache__/
 /research/
 GOOGLE_APP_CREDENTIALS.json
 GOOGLE_APP_CREDENTIALS_encoded_.txt
+/mlflow_experiment_name.yaml
+/evidently_htmls
