Trying pipeline test with empty data

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,46 +1,46 @@
-# name: Test Google Cloud Bucket Connection
+name: Test the DVC pipeilne
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   test-connection:
-#     runs-on: ubuntu-latest
+jobs:
+  test-pipeline:
+    runs-on: ubuntu-latest
     
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v2
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
         
-#       - name: Set up Python
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
 
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-#       - name: Decode Google Credentials
-#         run: |
-#           echo "${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}" | base64 --decode > /home/runner/google-credentials.json
+      # - name: Decode Google Credentials
+      #   run: |
+      #     echo "${{ secrets.GOOGLE_APP_CREDENTIALS_BASE64 }}" | base64 --decode > /home/runner/google-credentials.json
 
-#       - name: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
-#         run: |
-#           echo "GOOGLE_APPLICATION_CREDENTIALS=/home/runner/google-credentials.json" >> $GITHUB_ENV
+      # - name: Set GOOGLE_APPLICATION_CREDENTIALS and BUCKET_NAME environment variables
+      #   run: |
+      #     echo "GOOGLE_APPLICATION_CREDENTIALS=/home/runner/google-credentials.json" >> $GITHUB_ENV
+      #     echo "BUCKET_NAME=${{ secrets.BUCKET_NAME }}" >> $GITHUB_ENV
 
-#       - name: Set other environment variables
-#         run: |
-#           echo "BUCKET_NAME=${{ secrets.BUCKET_NAME }}" >> $GITHUB_ENV
-#           echo "DAGSHUB_PASSWORD=${{ secrets.DAGSHUB_PASSWORD }}" >> .env
-#           echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env
-#           echo "EVIDENTLY_PROJECT_ID=${{ secrets.EVIDENTLY_PROJECT_ID }}" >> .env
-#           echo "EVIDENTLY_TOKEN=${{ secrets.EVIDENTLY_TOKEN }}" >> .env
-#           echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env        
+      - name: Set other environment variables
+        run: |
+          echo "DAGSHUB_PASSWORD=${{ secrets.DAGSHUB_PASSWORD }}" >> .env
+          echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env
+          echo "EVIDENTLY_PROJECT_ID=${{ secrets.EVIDENTLY_PROJECT_ID }}" >> .env
+          echo "EVIDENTLY_TOKEN=${{ secrets.EVIDENTLY_TOKEN }}" >> .env
+          echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> .env        
 
-#       - name: Run Python script to test connection
-#         run: |
-#           python ./test_connection.py
+      - name: Run Python script to test connection
+        run: |
+          pytest src/test_pipeline.py --maxfail=1 --disable-warnings -q
 
